# tauri-plugin-wz-reader

./: Cargo.toml  README.md  build.rs  package.json  rollup.config.js
examples/tauri-app/: package.json  tsconfig.json  vite.config.js
examples/tauri-app/src/: App.svelte  style.css
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
examples/tauri-app/src/components/: FileSelect.svelte  Preview.svelte  WzTreeNode.svelte  WzTreeRoot.svelte
examples/tauri-app/src/lib/: Greet.svelte
examples/tauri-app/src/store/: preview.ts  wz.ts  wzTree.ts
guest-js/: apiClient.ts  index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: get_childs_info.toml  get_node_info.toml  get_server_url.toml  parse_node.toml  unparse_node.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  models.rs
src/handlers/: get_node_without_parse.rs  mod.rs  png.rs
src/server/: middlewares.rs  mod.rs  models.rs
src/server/controller/: mapping.rs  mod.rs  node.rs
src/utils/: block_parse.rs  resolver.rs
