[package]
name = "tauri-plugin-wz-reader"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-wz-reader"

[dependencies]
tauri = { version = "2.0.0-beta.19" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rayon = "1.9.0"
image = { version = "0.25.0", default-features = false, features = ["rayon", "bmp"] }
wz_reader = { version = "0.0.6", features = ["json"]}
axum = { version = "0.7.5", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
portpicker = { version = "0.1.1", optional = true}

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.15", features = ["build"] }

[features]
default = ["axum-server"]
axum-server = ["dep:axum", "dep:tokio", "dep:portpicker"]